[gd_scene load_steps=9 format=2]

[ext_resource path="res://basic/basic.gd" type="Script" id=1]
[ext_resource path="res://shared/dummy.png" type="Texture" id=2]
[ext_resource path="res://basic/basic.shader" type="Shader" id=3]
[ext_resource path="res://basic/greyscale_for_screen.shader" type="Shader" id=4]
[ext_resource path="res://basic/blur_effect_for_screen.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/distanceBetween = null
shader_param/radius = null

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )
shader_param/blur_amount = 2.5

[node name="Basic" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="ApplyGreyscale" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="ColorRect" type="ColorRect" parent="ApplyGreyscale"]
material = SubResource( 4 )
anchor_left = 0.05
anchor_top = 0.022
anchor_right = 0.319
anchor_bottom = 0.1
margin_top = 0.159999
margin_right = -0.320007
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 48.0
margin_right = 88.0
margin_bottom = 40.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 96.0
margin_right = 136.0
margin_bottom = 40.0
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 144.0
margin_right = 184.0
margin_bottom = 40.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 192.0
margin_right = 232.0
margin_bottom = 40.0
color = Color( 1, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
color = Color( 0, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="."]
margin_left = 288.0
margin_right = 328.0
margin_bottom = 40.0
color = Color( 1, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect7" type="ColorRect" parent="."]
margin_left = 336.0
margin_right = 376.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect8" type="ColorRect" parent="."]
margin_left = 384.0
margin_right = 424.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect9" type="ColorRect" parent="."]
margin_left = 48.0
margin_top = 48.0
margin_right = 88.0
margin_bottom = 88.0
color = Color( 0.509804, 0.247059, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect10" type="ColorRect" parent="."]
margin_left = 96.0
margin_top = 48.0
margin_right = 136.0
margin_bottom = 88.0
color = Color( 0.247059, 0.498039, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect11" type="ColorRect" parent="."]
margin_left = 144.0
margin_top = 48.0
margin_right = 184.0
margin_bottom = 88.0
color = Color( 0.243137, 0.243137, 0.490196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect12" type="ColorRect" parent="."]
margin_left = 192.0
margin_top = 48.0
margin_right = 232.0
margin_bottom = 88.0
color = Color( 0.501961, 0.501961, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect13" type="ColorRect" parent="."]
margin_left = 240.0
margin_top = 48.0
margin_right = 280.0
margin_bottom = 88.0
color = Color( 0.239216, 0.478431, 0.478431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect14" type="ColorRect" parent="."]
margin_left = 288.0
margin_top = 48.0
margin_right = 328.0
margin_bottom = 88.0
color = Color( 0.545098, 0.270588, 0.545098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect15" type="ColorRect" parent="."]
margin_left = 336.0
margin_top = 48.0
margin_right = 376.0
margin_bottom = 88.0
color = Color( 0.494118, 0.494118, 0.494118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect16" type="ColorRect" parent="."]
margin_left = 384.0
margin_top = 48.0
margin_right = 424.0
margin_bottom = 88.0
color = Color( 0.521569, 0.521569, 0.521569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyBlur" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Control" type="Control" parent="ApplyBlur"]
margin_left = 64.0
margin_top = 112.0
margin_right = 104.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ApplyBlur/Control"]
material = SubResource( 6 )
anchor_left = 0.05
anchor_top = 0.022
anchor_right = 8.6
anchor_bottom = 1.4
margin_left = -2.0
margin_top = -0.88
margin_bottom = -3.8147e-06
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="ApplyBlur/Control"]
margin_left = -96.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = 40.0
max_value = 5.0
step = 0.01
value = 2.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ApplyBlur/Control"]
margin_left = -96.0
margin_top = 8.0
margin_right = -22.0
margin_bottom = 22.0
text = "change blur"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect17" type="ColorRect" parent="."]
margin_left = 48.0
margin_top = 96.0
margin_right = 88.0
margin_bottom = 136.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect18" type="ColorRect" parent="."]
margin_left = 96.0
margin_top = 96.0
margin_right = 136.0
margin_bottom = 136.0
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect19" type="ColorRect" parent="."]
margin_left = 144.0
margin_top = 96.0
margin_right = 184.0
margin_bottom = 136.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect20" type="ColorRect" parent="."]
margin_left = 192.0
margin_top = 96.0
margin_right = 232.0
margin_bottom = 136.0
color = Color( 1, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect21" type="ColorRect" parent="."]
margin_left = 240.0
margin_top = 96.0
margin_right = 280.0
margin_bottom = 136.0
color = Color( 0, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect22" type="ColorRect" parent="."]
margin_left = 288.0
margin_top = 96.0
margin_right = 328.0
margin_bottom = 136.0
color = Color( 1, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect23" type="ColorRect" parent="."]
margin_left = 336.0
margin_top = 96.0
margin_right = 376.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect24" type="ColorRect" parent="."]
margin_left = 384.0
margin_top = 96.0
margin_right = 424.0
margin_bottom = 136.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect25" type="ColorRect" parent="."]
margin_left = 48.0
margin_top = 144.0
margin_right = 88.0
margin_bottom = 184.0
color = Color( 0.509804, 0.247059, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect26" type="ColorRect" parent="."]
margin_left = 96.0
margin_top = 144.0
margin_right = 136.0
margin_bottom = 184.0
color = Color( 0.247059, 0.498039, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect27" type="ColorRect" parent="."]
margin_left = 144.0
margin_top = 144.0
margin_right = 184.0
margin_bottom = 184.0
color = Color( 0.243137, 0.243137, 0.490196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect28" type="ColorRect" parent="."]
margin_left = 192.0
margin_top = 144.0
margin_right = 232.0
margin_bottom = 184.0
color = Color( 0.501961, 0.501961, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect29" type="ColorRect" parent="."]
margin_left = 240.0
margin_top = 144.0
margin_right = 280.0
margin_bottom = 184.0
color = Color( 0.239216, 0.478431, 0.478431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect30" type="ColorRect" parent="."]
margin_left = 288.0
margin_top = 144.0
margin_right = 328.0
margin_bottom = 184.0
color = Color( 0.545098, 0.270588, 0.545098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect31" type="ColorRect" parent="."]
margin_left = 336.0
margin_top = 144.0
margin_right = 376.0
margin_bottom = 184.0
color = Color( 0.494118, 0.494118, 0.494118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect32" type="ColorRect" parent="."]
margin_left = 384.0
margin_top = 144.0
margin_right = 424.0
margin_bottom = 184.0
color = Color( 0.521569, 0.521569, 0.521569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="ready" from="." to="." method="_on_Basic_ready"]
[connection signal="value_changed" from="ApplyBlur/Control/HSlider" to="." method="_on_HSlider_value_changed"]
